@@ -59,6 +59,7 @@
 #define _MTDIOCBASE     (0x8a00) /* MTD ioctl commands */
 #define _SIOCBASE       (0x8b00) /* Socket ioctl commands */
 #define _ARPBASE        (0x8c00) /* ARP ioctl commands */
+#define _TSBASE         (0x8d00) /* Touchscreen ioctl commands */
 
 /* Macros used to manage ioctl commands */
 
@@ -159,6 +160,11 @@
 
 #define _ARPIOCVALID(c)   (_IOC_TYPE(c)==_ARPBASE)
 #define _ARPIOC(nr)       _IOC(_ARPBASE,nr)
+
+/* NuttX ARP touchscrren ioctl definitions (see nuttx/input/touchscreen.h) **/
+
+#define _TSIOCVALID(c)    (_IOC_TYPE(c)==_TSBASE)
+#define _TSIOC(nr)        _IOC(_TSBASE,nr)
 
 /****************************************************************************
  * Public Type Definitions
